syntax = "proto3";

package v2ray.core.app.observatory.command;
option csharp_namespace = "V2Ray.Core.App.Observatory.Command";
option go_package = "github.com/v2fly/v2ray-core/v4/app/observatory/command";
option java_package = "com.v2ray.core.app.observatory.command";
option java_multiple_files = true;

import "app/observatory/config.proto";

message GetOutboundStatusRequest {
}

message GetOutboundStatusResponse {
  v2ray.core.app.observatory.ObservationResult status = 1;
}

service ObservatoryService {
  rpc GetOutboundStatus(GetOutboundStatusRequest)
      returns (GetOutboundStatusResponse) {}
}


message Config {}